# ros2-dynamic-slam

./: .gitignore  README.md
no_filter_bag/: metadata.yaml
src/my_gazebo_plugins/: CMakeLists.txt  package.xml
src/my_gazebo_plugins/scripts/: moving_box_commander.py
src/my_gazebo_plugins/src/: moving_box_cmd_vel_plugin.cpp
src/my_gazebo_world/: CMakeLists.txt  package.xml
src/my_gazebo_world/launch/: gazebo.launch.py
src/my_gazebo_world/worlds/: moving_box.sdf  moving_cylinder.sdf
src/scan_filter/: package.xml  setup.py
src/scan_filter/scan_filter/: scan_filter_node.py
src/yolo_detector/: package.xml  setup.py
src/yolo_detector/yolo_detector/: yolo_node.py
